--- a/templates/results_entities.html
+++ b/templates/results_entities.html
@@ -89,7 +89,7 @@
                 <td style="width:20%">Název:</td>
                 <td style="width:40%"><b>{{ row.nazev }}</b></td>
                 <td style="width:15%">IČO:</td>
-                <td style="width:25%"><b>{{ row.ico }}</b></td>
+                <td style="width:25%"><a href="/{{ row.ico }}"><b>{{ row.ico }}</b></a></td>
             </tr>
 
             <tr>
