--- a/templates/results_entities.html
+++ b/templates/results_entities.html
@@ -88,8 +88,13 @@
             <tr>
                 <td style="width:20%">Název:</td>
                 <td style="width:40%"><b>{{ row.nazev }}</b></td>
+                {% if row.ico != 0 %}
                 <td style="width:15%">IČO:</td>
                 <td style="width:25%"><a href="/{{ row.ico }}"><b>{{ row.ico }}</b></a></td>
+                {% else %}
+                <td style="width:15%">Zahraniční reg. č.:</td>
+                <td style="width:25%"><b>{{ row.reg_cislo }}</b></td>
+                {% endif %}               
             </tr>
 
             <tr>
