--- a/templates/results_persons.html
+++ b/templates/results_persons.html
@@ -20,6 +20,7 @@
             {% set x = my_dict.__setitem__("vlozka", elem.statutarni_organ.company.vlozka) %}
             {% set x = my_dict.__setitem__("soud", elem.statutarni_organ.company.soud) %}
             {% set x = my_dict.__setitem__("zapis", elem.statutarni_organ.company.zapis) %}
+            {% set x = my_dict.__setitem__("pravni_forma", elem.statutarni_organ.company.current_legal_form_text()) %}
             {% set test_list = test_list.append(my_dict) %}
         {% endif %}
     {% endfor %}
@@ -37,6 +38,7 @@
             {% set x = my_dict.__setitem__("vlozka", elem.dozorci_rada.company.vlozka) %}
             {% set x = my_dict.__setitem__("soud", elem.dozorci_rada.company.soud) %}
             {% set x = my_dict.__setitem__("zapis", elem.dozorci_rada.company.zapis) %}
+            {% set x = my_dict.__setitem__("pravni_forma", elem.dozorci_rada.company.current_legal_form_text()) %}
             {% set test_list = test_list.append(my_dict) %}
         {% endif %}
     {% endfor %}    
@@ -54,6 +56,7 @@
             {% set x = my_dict.__setitem__("vlozka", elem.company.vlozka) %}
             {% set x = my_dict.__setitem__("soud", elem.company.soud) %}
             {% set x = my_dict.__setitem__("zapis", elem.company.zapis) %}
+            {% set x = my_dict.__setitem__("pravni_forma", elem.company.current_legal_form_text()) %}
             {% set test_list = test_list.append(my_dict) %}
         {% endif %}
     {% endfor %}    
@@ -71,6 +74,7 @@
             {% set x = my_dict.__setitem__("vlozka", elem.company.vlozka) %}
             {% set x = my_dict.__setitem__("soud", elem.company.soud) %}
             {% set x = my_dict.__setitem__("zapis", elem.company.zapis) %}
+            {% set x = my_dict.__setitem__("pravni_forma", elem.company.current_legal_form_text()) %}
             {% set test_list = test_list.append(my_dict) %}
         {% endif %}
     {% endfor %}
@@ -88,6 +92,7 @@
             {% set x = my_dict.__setitem__("vlozka", elem.company.vlozka) %}
             {% set x = my_dict.__setitem__("soud", elem.company.soud) %}
             {% set x = my_dict.__setitem__("zapis", elem.company.zapis) %}
+            {% set x = my_dict.__setitem__("pravni_forma", elem.company.current_legal_form_text()) %}
             {% set test_list = test_list.append(my_dict) %}
         {% endif %}
     {% endfor %}    
@@ -116,7 +121,7 @@
             </tr>
 
             <tr>
-                <td><i>ve společnosti:</i></td>
+                <td><i>{{ elem.pravni_forma }}:</i></td>
                 <td></td>
                 <td></td>
                 <td></td>
