--- a/templates/trivia.html
+++ b/templates/trivia.html
@@ -6,6 +6,7 @@
 <p>Další zajímvavé údaje z obchodního resjtříku:</p>
 <p><a href="/most_common_addresses">Seznam nejčastějších sídel</a></p>
 <p><a href="/oldest_companies">Seznam nejstarších společností</a></p>
+<p><a href="/most_common_ubo">Seznam nejčastějších konečných vlastníků</a></p>
 <p><a href="/most_common_purpose">Seznam nejčastějších účelů</a></p>
 <p><a href="/most_common_business">Seznam nejčastějších předmětů podnikání</a></p>
 <p><a href="/most_common_activity">Seznam nejčastějších předmětů činnosti</a></p>
