--- a/templates/extract.html
+++ b/templates/extract.html
@@ -422,7 +422,7 @@
     <!-- END Display sole shareholder -->
 
     <!-- Display shareholders -->
-    {% if row.spolecnici|length > 0 %}
+{% if row.spolecnici|length > 0 or row.spolecnici_uvolneny_podil|length > 0 %}
     <tr>
         <td>Společníci:</td>
         <td></td>
@@ -466,10 +466,54 @@
             {% endfor %}
         {% endif %}
         <!-- END of individual ownership interests -->
-
     </tr>
     {% endfor %}
-    {% endif %}
+
+
+    <!-- Insert vacant ownership interests  -->
+    {% for i in range (row.spolecnici_uvolneny_podil|length) %}
+    <tr>
+        <td style = padding-left:2em>Uvolněný obchodní podíl:</td>
+        {% if row.spolecnici_uvolneny_podil[i].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} {% if row.spolecnici_uvolneny_podil[i].text_uvolneny_podil != "0" %}{{ row.spolecnici_uvolneny_podil[i].text_uvolneny_podil }}{% endif %}   
+            {{ underlne_style_close|safe }}</td>
+        <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.spolecnici_uvolneny_podil[i].zapis_datum }} {% if row.spolecnici_uvolneny_podil[i].vymaz_datum != 0 %} <br>   Vymazáno: {{ row.spolecnici_uvolneny_podil[i].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
+    </tr>
+
+    <!-- Insert individual vacant ownership interests -->
+        {% if row.spolecnici_uvolneny_podil[i].podily|length > 0 %}
+                
+            {% for j in range (row.spolecnici_uvolneny_podil[i].podily|length) %}
+            <tr>
+                <td style = padding-left:4em>Podíl:</td>
+                {% if row.spolecnici_uvolneny_podil[i].podily[j].vymaz_datum != 0 %}
+                    {% set underlne_style_open = undedrline_open_deleted %}
+                    {% set underlne_style_close = undedrline_closed_deleted %}
+                {% else %}
+                    {% set underlne_style_open = "" %}
+                    {% set underlne_style_close = "" %}
+                {% endif %}
+                <td>{{ underlne_style_open|safe }} 
+                        {% for elem in row.spolecnici_uvolneny_podil[i].podily[j].my_rep() %}
+                            {{ elem }}<br>
+                        {% endfor %}
+                    {{ underlne_style_close|safe }}
+                </td>
+                <td>{{ underlne_style_open|safe }}Zapsáno: {{ row.spolecnici_uvolneny_podil[i].podily[j].zapis_datum }} {% if row.spolecnici_uvolneny_podil[i].podily[j].vymaz_datum != 0 %}<br>Vymazáno: {{ row.spolecnici_uvolneny_podil[i].podily[j].vymaz_datum }}{% endif %}{{ underlne_style_close|safe }}</td>
+            </tr>
+            {% endfor %}
+        {% endif %}
+    <!-- END of individual vacant ownership interests -->
+    {% endfor %}
+    <!-- END of vacant ownership interests  -->
+
+{% endif %}
     <!-- END Display shareholders -->
 
     <!-- Display UBO -->
