--- a/templates/extract.html
+++ b/templates/extract.html
@@ -530,7 +530,7 @@
         <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.spolecnici_spolecny_podil[i].zapis_datum }} {% if row.spolecnici_spolecny_podil[i].vymaz_datum != 0 %} <br>   Vymazáno: {{ row.spolecnici_spolecny_podil[i].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
     </tr>
 
-    <!-- Insert individual vacant ownership interests -->
+    <!-- Insert individual common ownership interests -->
         {% if row.spolecnici_spolecny_podil[i].podily|length > 0 %}
                 
             {% for j in range (row.spolecnici_spolecny_podil[i].podily|length) %}
@@ -553,15 +553,40 @@
             </tr>
             {% endfor %}
         {% endif %}
-    <!-- END of individual vacant ownership interests -->
+    <!-- END of individual common ownership interests -->
+
+    <!-- Insert individual co-shareholders -->
+    {% if row.spolecnici_spolecny_podil[i].podilnici|length > 0 %}
+                
+    {% for j in range (row.spolecnici_spolecny_podil[i].podilnici|length) %}
+    <tr>
+        <td style = padding-left:4em>Podílník:</td>
+        {% if row.spolecnici_spolecny_podil[i].podilnici[j].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} 
+            {% if row.spolecnici_spolecny_podil[i].podilnici[j].podilnik_fo_id != None %}
+                {{ row.spolecnici_spolecny_podil[i].podilnici[j].jmeno }}
+            {% else %}
+                {{ row.spolecnici_spolecny_podil[i].podilnici[j].oznaceni_po.nazev }}{% if row.spolecnici_spolecny_podil[i].podilnici[j].oznaceni_po.reg_cislo != 0 %}, reg č. {{ row.spolecnici_spolecny_podil[i].podilnici[j].oznaceni_po.reg_cislo }}{% endif %}{% if row.spolecnici_spolecny_podil[i].podilnici[j].oznaceni_po.ico != 0 %}, IČ <a href="/{{ row.spolecnici_spolecny_podil[i].podilnici[j].oznaceni_po.ico }}">{{ row.spolecnici_spolecny_podil[i].podilnici[j].oznaceni_po.ico }}</a>{% endif %}
+            {% endif %}
+            <br>{{ row.spolecnici_spolecny_podil[i].podilnici[j].adresa }}
+            {{ underlne_style_close|safe }}
+        </td>
+        <td>{{ underlne_style_open|safe }}Zapsáno: {{ row.spolecnici_spolecny_podil[i].podilnici[j].zapis_datum }} {% if row.spolecnici_spolecny_podil[i].podilnici[j].vymaz_datum != 0 %}<br>Vymazáno: {{ row.spolecnici_spolecny_podil[i].podilnici[j].vymaz_datum }}{% endif %}{{ underlne_style_close|safe }}</td>
+    </tr>
     {% endfor %}
+{% endif %}
+    <!-- END of individual co-shareholders -->
 
-
+    {% endfor %}
     <!-- END of common ownership interests -->
 
-
-
-{% endif %}
+    {% endif %}
     <!-- END Display shareholders -->
 
     <!-- Display UBO -->
