--- a/templates/header.html
+++ b/templates/header.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <title>Search Results - Flask Justice Database</title>
-<body>
+<body class="container-fluid">
 <table class="table">
   <tr>
     <td><a href="/">Veřejný rejstřík podle subjektů</a></td>
