new trivia functions

--- a/templates/trivia.html
+++ b/templates/trivia.html
@@ -11,5 +11,8 @@
 <p><a href="/most_common_business">Seznam nejčastějších předmětů podnikání</a></p>
 <p><a href="/most_common_activity">Seznam nejčastějších předmětů činnosti</a></p>
 <p><a href="/most_common_degree">Seznam nejčastějších titulů</a></p>
+<p><a href="/oldest_shareholders">Seznam nejstarších společníků</a></p>
+<p><a href="/longest_registered_shareholders">Seznam nejdéle registrovaných společníků</a></p>
+<p><a href="/longest_registered_executives">Seznam nejdéle registrovaných statutárů</a></p>
 
 {% include 'footer.html' %}
